--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@ hi inspector! for the first time in my creative life, i'm freeing myself web bui
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⣴⠶⢾⣟⣻⣟⣻⡛⠾⢿⠛⠛⠛⠒⠂⠉⣻⣆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣾⡏⠦⢘⢿⣿⣿⣿⣿⡿⠄⣈⢲⠀⠀⠀⢀⠀⠀⢿⣆⠀⠈⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⢯⡆⠤⠀⠀⠉⠡⠆⠀⡢⢋⠜⠀⠀⠁⠀⢀⠂⠈⣿⡄⠀⠈⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠀⠀⠀⠀
-⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣿⡧⡇⠀⠀⣀⠤⠔⢂⠡⠄⠈⠀⠀⠐⠀⠌⡲⢄⠠⣘⣷⡄⠀⠈⠂⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⡀⠤⠀⠂⠀⠀⣿⡗⡇⡂⠭⠐⠂⠉⠀⢶⡄⣈⣴⣾⣶⡶⠞⠃⠈⠉⣽⣿⣿⣄⣀⣠⣤⣴⣶⣾⣿⢟⡟⣿⡇⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠔⠈⠀⠀⠀⣀⣀⣤⣤⣿⣿⣽⣤⣤⣤⡦⠶⠛⠈⢉⠝⣿⣿⢿⣿⣿⠆⣠⣌⠹⣿⣿⣿⣿⣛⣛⣯⣭⣥⠈⠙⢾⣿⠃⠀⢠⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠄⠀⠀⣀⣴⠾⣛⢫⠭⣉⠳⡐⢆⡚⡍⠭⢭⢛⣛⠶⠾⣿⣮⣿⣯⣾⣿⣿⣾⡿⠿⠟⠛⠛⠉⣉⣉⣤⡴⠞⣋⣤⣾⠟⠁⠀⢀⠂⠀⠀⠀
@@ -57,11 +56,11 @@ hi inspector! for the first time in my creative life, i'm freeing myself web bui
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Irish Tee-Sy</title>
+    <title>Irish is online</title>
     <link rel="icon" type="image/x-icon" href="favicon.png">
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://use.typekit.net/psm7oqu.css"/>
-
+  
   </head>
   <body onload="setInterval(step,100)">
     <!-- intro-->
@@ -97,14 +96,15 @@ hi inspector! for the first time in my creative life, i'm freeing myself web bui
       </div>
       <!-- col 2 -->
       <div class="projects">
+        
         <div class="header-container">
           <h1>Catch my small websites <span class="h1-symbols">── .✦</span></h1>
         </div>
         <div class="project-list">
-        <div class="project-name"><a href="https://we-once-existed-here.glitch.me/">we once existed here</a></div>
+        <div class="project-name" id="sfpc-dll"><a href="https://we-once-existed-here.glitch.me/">we once existed here</a></div>
         <div class="project-name" id="uxBtn"><a href="http://uxuirish.xyz">uxuirish.xyz (boring!)</a></div>
         <div class="project-name"><a href="#">coming soon!</a></div>
-        <div class="project-name"><a href="https://kilo-crisis-hour.glitch.me/">existential crisis hour (html mv)</a></div>
+        <div class="project-name" id="kilo-mv"><a href="https://kilo-crisis-hour.glitch.me/">existential crisis hour (html mv)</a></div>
         <div class="project-name"><a href="#">coming soon!</a></div>
         <div class="project-name"><a href="#">coming soon!</a></div>
         <div class="project-name"><a href="#">coming soon!</a></div>
@@ -132,9 +132,10 @@ hi inspector! for the first time in my creative life, i'm freeing myself web bui
       </div>
     </div>
     <script src="https://unpkg.com/cursor-effects@latest/dist/browser.js"></script>
+    <script src="index.js"></script>
 
+    <script src="monitor-texture.js"></script>
 
-    </script>
     <script type="text/javascript">
       //thank you @frumbert for this
       message = "thanks for finding me?! ✿ ";
@@ -142,181 +143,9 @@ hi inspector! for the first time in my creative life, i'm freeing myself web bui
         message = message.substr(1) + message.substr(0,1);
         document.title = message.substr(0,15);
       }
-    </script>
-    <script>
 
 
-//uxuirish.xyz alert
-document.getElementById("uxBtn").addEventListener("click", function (event) { 
-    if (!confirm("🛑⛔️🫷🥺🫸 Stop! This website reflects my 9-5 self. Do you really want to see this side of me?")) {
-        event.preventDefault(); // cancel button
-    }
-});
-
-//Digital Poetics alert
-// document.getElementById("dPoetics").addEventListener("click", function (event) { 
-//     if (!confirm("🍋 Phase 1 of this poem was created at Digital Poetics #1, Gray Area. It is a subtle poke at digital divination and treating the internet as our oracle. Phrase 2 WIP. ʚɞ ⁺˖ ⸝⸝")) {
-//         event.preventDefault(); // cancel button
-//     }
-// });
-
-//90s cursor effects by tholman
-  window.addEventListener("load", (event) => {
-    new cursoreffects.fairyDustCursor({
-      colors: ["#FF28EA", "#FFB7F0", "#FFDFF7"]
-    });
-  });
-
-//BIO EFFECTS_____________________________
-const addLineButton = document.querySelector(".addLineButton");
-const line1 = document.querySelector(".line1");
-const line2 = document.querySelector(".line2");
-const line3 = document.querySelector(".line3");
-const line4 = document.querySelector(".line4");
-const line5 = document.querySelector(".line5");
-
-
-let lineCount = 1; 
-
-function createPopup(content, index) {
-  const popup = document.createElement('div');
-  popup.className = 'popup';
-  popup.innerHTML = `
-    <div class="popup-header">
-      <span class="close-btn">X</span>
-    </div>
-    <div class="popup-content">${content}</div>
-  `;
-
-  // random popup positions
-  const bioText = document.querySelector('.bio-text');
-  const rect = bioText.getBoundingClientRect();
-  const button = document.querySelector('.addLineButton');
-  const buttonRect = button.getBoundingClientRect();
-  
-  // calculate positions around the middle of the screen
-  const middleY = window.innerHeight / 2;
-  const maxX = rect.width - 300; // Account for popup width
-  
-  if (window.innerWidth >= 768) {
-    // desktop: random position from left, centered vertically
-    const randomX = Math.floor(Math.random() * maxX);
-    const randomY = middleY + (Math.random() * 200 - 100); // ±100px from middle
-    popup.style.left = `${randomX}px`;
-    popup.style.top = `${randomY}px`;
-  } else {
-    //mobile: position from left with adjusted vertical range
-    const randomX = Math.floor(Math.random() * (maxX * 0.7)); // Reduce horizontal range on mobile
-    const randomY = middleY + (Math.random() * 150 - 75); // ±75px from middle (smaller range for mobile)
-    popup.style.left = `${randomX}px`;
-    popup.style.top = `${randomY}px`;
-    
-    // adjust popup width for mobile
-    popup.style.maxWidth = '250px';
-  }
-
-  // make popup draggable
-  let isDragging = false;
-  let currentX;
-  let currentY;
-  let initialX;
-  let initialY;
-  let xOffset = 0;
-  let yOffset = 0;
-
-  // make entire popup draggable
-  popup.addEventListener('mousedown', dragStart);
-  document.addEventListener('mousemove', drag);
-  document.addEventListener('mouseup', dragEnd);
-
-  function dragStart(e) {
-    if (e.target !== popup.querySelector('.close-btn')) {
-      initialX = e.clientX - xOffset;
-      initialY = e.clientY - yOffset;
-      isDragging = true;
-    }
-  }
-
-  function drag(e) {
-    if (isDragging) {
-      e.preventDefault();
-      currentX = e.clientX - initialX;
-      currentY = e.clientY - initialY;
-
-      xOffset = currentX;
-      yOffset = currentY;
-
-      setTranslate(currentX, currentY, popup);
-    }
-  }
-
-  function dragEnd() {
-    initialX = currentX;
-    initialY = currentY;
-    isDragging = false;
-  }
-
-  function setTranslate(xPos, yPos, el) {
-    el.style.transform = `translate3d(${xPos}px, ${yPos}px, 0)`;
-  }
-
-  // close button 
-  const closeBtn = popup.querySelector('.close-btn');
-  closeBtn.addEventListener('click', () => {
-    popup.remove();
-  });
-
-  bioText.appendChild(popup);
-}
-
-function addLine() {
-  if (lineCount === 1) {
-    createPopup("Expanding into internet art. Reliving slow narratives of identity, girlhood, and temporality through a <a href='https://luckysoap.com/statements/handmadeweb.html' target='_blank'>handmade poetic web</a>.", lineCount);
-  } else if (lineCount === 2) {
-    createPopup("Learned Human-Computer Interaction/AI at the University of California, Santa Cruz. Unlearned at School for Poetic Computation, NYC.", lineCount);
-  } else if (lineCount === 3) {
-    createPopup("Dreams of creating agency towards a loving internet. A reminder that there is a real human behind technology.", lineCount);
-  } else if (lineCount === 4) {
-    createPopup('<img src="photos/me_hehe.png" id="me-hehe" /><p id="hi">hi!</p>', lineCount);
-    addLineButton.remove();
-  }
-  lineCount++;
-}
-
-document.addEventListener('DOMContentLoaded', function() {
-  const monitorWrapper = document.querySelector('.monitor-wrapper');
-  const monitorImg = monitorWrapper.querySelector('.monitor-img');
-  const monitorScreen = monitorWrapper.querySelector('.monitor-screen');
-  const powerBtn = monitorWrapper.querySelector('.monitor-power-indicator');
-  const monitorGlitch = monitorWrapper.querySelector('.monitor-glitch');
-
-  let isOn = true;
-
-  function triggerGlitch() {
-    monitorGlitch.classList.remove('active');
-    monitorGlitch.offsetWidth; // Force reflow
-    monitorGlitch.classList.add('active');
-    setTimeout(() => {
-      monitorGlitch.classList.remove('active');
-    }, 350);
-  }
-
-  powerBtn.addEventListener('click', function() {
-    isOn = !isOn;
-    triggerGlitch();
-    if (isOn) {
-      monitorImg.src = 'photos/landing-monitor.png';
-      monitorScreen.classList.remove('monitor-off');
-      if (window.toggleMonitorScanlines) window.toggleMonitorScanlines(true);
-    } else {
-      monitorImg.src = 'photos/landing-monitor-off.png';
-      monitorScreen.classList.add('monitor-off');
-      if (window.toggleMonitorScanlines) window.toggleMonitorScanlines(false);
-    }
-  });
-});
 
     </script>
-    <script src="monitor-texture.js"></script>
   </body>
 </html>
