update nav order

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-    <!-- last updated: april 2025
-hi inspector! for the first time in my creative life, i'm freeing myself web builders and templates! no more subscriptions!!  no more customer support emails!!! no more moving on to the next trendy platform!!! it's only me and you babe!!! and most of all, WELCOME TO MY INTERNET!!!!!!!!!! 
+    <!-- last updated: jun 2025
+hi inspector! for the first time in my creative life, i'm freeing myself from shiny web builders and templates! no more subscriptions!!  no more customer support emails!!! no more moving on to the next trendy platform!!! it's only me and you babe!!!!!!!!!!! 
     ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠐⠀⠁⠀⠀⠀⠀⠀⠀⠀⠀⢀⣠⣴⣶⡶⣶⣤⡀⠀⠀⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⣴⠶⢾⣟⣻⣟⣻⡛⠾⢿⠛⠛⠛⠒⠂⠉⣻⣆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
@@ -82,10 +82,10 @@ hi inspector! for the first time in my creative life, i'm freeing myself web bui
             <img src="photos/landing-monitor.png" class="monitor-img" alt="Monitor frame">
           </div>
           <ul class="socials">
-            <li><a href="https://www.yourworldoftext.com/~digirish/" target="_blank">sign guestbook</a></li>
             <li><a href="https://www.instagram.com/_t__sy" target="_blank">instagram</a></li>
             <li><a href="https://www.are.na/irish-sy/" target="_blank">are.na</a></li>
             <li><a href="https://www.letterboxd.com/iteesy" target="_blank">letterboxd</a></li>
+            <li><a href="https://www.yourworldoftext.com/~digirish/" target="_blank">sign guestbook</a></li>
           </ul>
           <p class="line1"></p>
           <p class="line2"></p>
