--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ hi inspector! for the first time in my creative life, i'm freeing myself from sh
           <h1>Catch my small websites <span class="h1-symbols">── .✦</span></h1>
         </div>
         <div class="project-list">
-        <div class="project-name" id="sfpc-dll"><a href="https://we-once-existed-here.glitch.me/">we once existed here</a></div>
+        <div class="project-name" id="sfpc-dll"><a href="we-once-existed-here.html">we once existed here</a></div>
         <div class="project-name" id="uxBtn"><a href="http://uxuirish.xyz">uxuirish.xyz (boring!)</a></div>
         <div class="project-name"><a href="#">coming soon!</a></div>
         <div class="project-name" id="kilo-mv"><a href="https://kilo-crisis-hour.glitch.me/">existential crisis hour (html mv)</a></div>
