--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ hi inspector! for the first time in my creative life, i'm freeing myself from sh
         <div class="project-name" id="sfpc-dll"><a href="we-once-existed-here.html">we once existed here</a></div>
         <div class="project-name" id="uxBtn"><a href="http://uxuirish.xyz">uxuirish.xyz (boring!)</a></div>
         <div class="project-name"><a href="#">coming soon!</a></div>
-        <div class="project-name" id="kilo-mv"><a href="https://kilo-crisis-hour.glitch.me/">existential crisis hour (html mv)</a></div>
+        <div class="project-name" id="kilo-mv"><a href="kilo-kish-mv.html">existential crisis hour (html mv)</a></div>
         <div class="project-name"><a href="#">coming soon!</a></div>
         <div class="project-name"><a href="#">coming soon!</a></div>
         <div class="project-name"><a href="#">coming soon!</a></div>
