--- a/kilo-kish-mv.html
+++ b/kilo-kish-mv.html
@@ -350,7 +350,6 @@ div.footer {
   </head>
   <body>
     <!-- This is the video -->
-
 <div
   class="mv"
   style="position: fixed; z-index: 99; width: 100%; height: 100%"
@@ -361,7 +360,7 @@ div.footer {
         frameborder="2"
         height="20%"
         width="20%"
-        src="https://www.youtube.com/embed/iu79r5OnVKo?modestbranding=1&autoplay=1&mute=1&controls=0&showinfo=0&autohide=1"
+        src="https://www.youtube.com/embed/iu79r5OnVKo?modestbranding=1&controls=0&showinfo=0&autohide=1"
       >
       </iframe>
     </marquee>
