TEMP - remove outline

--- a/we-once-existed-here.html
+++ b/we-once-existed-here.html
@@ -41,6 +41,10 @@
 
   <head>
 <style>
+  * {
+    outline: none;
+}
+
   body {
   background-color: #f7f7f7;
 }
@@ -710,10 +714,10 @@ const slides = [
         content: "if you made it this far, thank you for letting me inhabit your screen. is this now your memory of me?",
         position: { top: "40%", left: "20%" },
       },
-      {
-        content: "instagram @_t__sy for more",
-        position: { top: "56%", left: "40%" },
-      },
+{
+  content: 'instagram: <a href="https://instagram.com/_t__sy" target="_blank">@_t__sy</a>',
+  position: { top: "56%", left: "40%" },
+}
     ],
 
   },
