installation case study

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-    <!-- last updated: jun 2025
-hi inspector! for the first time in my creative life, i'm freeing myself from shiny web builders and templates! no more subscriptions!!  no more customer support emails!!! no more moving on to the next trendy platform!!! it's only me and you babe!!!!!!!!!!! 
+    <!-- last updated: july 28 2025
+hi inspector! for the first time in my creative life, i'm freeing myself from 
+shiny web builders and templates! no more subscriptions!!  no more customer support emails!!! 
+no more moving on to the next trendy platform!!!
     ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠐⠀⠁⠀⠀⠀⠀⠀⠀⠀⠀⢀⣠⣴⣶⡶⣶⣤⡀⠀⠀⠄⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣤⣴⠶⢾⣟⣻⣟⣻⡛⠾⢿⠛⠛⠛⠒⠂⠉⣻⣆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
@@ -102,11 +104,11 @@ hi inspector! for the first time in my creative life, i'm freeing myself from sh
           <h1>Catch my small websites <span class="h1-symbols">── .✦</span></h1>
         </div>
         <div class="project-list">
+        <div class="project-name" id="cci-showcase"><a href="what-fields-cannot-gather.html">what fields cannot gather (installation)</a></div>
         <div class="project-name" id="sfpc-dll"><a href="we-once-existed-here.html">we once existed here</a></div>
-        <div class="project-name" id="uxBtn"><a href="http://uxuirish.xyz">uxuirish.xyz (boring!)</a></div>
-        <div class="project-name"><a href="#">coming soon!</a></div>
+        <div class="project-name" id="ux-site"><a href="http://uxuirish.xyz">uxuirish.xyz (boring!)</a></div>
         <div class="project-name" id="kilo-mv"><a href="kilo-kish-mv.html">existential crisis hour (html mv)</a></div>
-        <div class="project-name"><a href="#">coming soon!</a></div>
+        <div class="project-name"><a href="alay.html">alay (anthology)</a></div>
         <div class="project-name"><a href="#">coming soon!</a></div>
         <div class="project-name"><a href="#">coming soon!</a></div>
         <div class="project-name"><a href="#">coming soon!</a></div>
