--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ no more moving on to the next trendy platform!!!
         <div class="project-name" id="sfpc-dll"><a href="we-once-existed-here.html">we once existed here</a></div>
         <div class="project-name" id="ux-site"><a href="http://uxuirish.xyz">uxuirish.xyz (boring!)</a></div>
         <div class="project-name" id="kilo-mv"><a href="kilo-kish-mv.html">existential crisis hour (html mv)</a></div>
-        <div class="project-name"><a href="alay.html">alay (anthology)</a></div>
+        <div class="project-name" id="alay"><a href="alay.html">alay (anthology)</a></div>
         <div class="project-name"><a href="#">coming soon!</a></div>
         <div class="project-name"><a href="#">coming soon!</a></div>
         <div class="project-name"><a href="#">coming soon!</a></div>
