--- a/htmlday-2025.html
+++ b/htmlday-2025.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BRAIN ROT HOURS!!!</title>
+    <title>scrolling in the summer of 2025</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Bungee+Shade&family=Russo+One&family=Orbitron:wght@900&family=Fredoka+One&family=Press+Start+2P&display=swap');
         
