--- a/the-thing.html
+++ b/the-thing.html
@@ -246,7 +246,7 @@
         <div class = "pic-line-vertical">
         <img class="girl" src="/photos/girl.png"></img>
         <div class = "thanks">
-            <p>if my time management sucks is that because of capitalist language to obey a 9-5 so that time feels finite and time to ourselves is meant to be luxury or — </p>
+            <p>I curate my anxiety through targeted advertisements. I bought you after 20 ads.</p>
         </div>
         </div>  
 
@@ -260,7 +260,7 @@
         <img class="girl" src="/photos/girl.png"></img>
 
         <div class = "thanks">
-            <p>have people actually slipped on a banana peel? why is that even a thing? like banana peels aren't slippery but i don't want to search it up because what if it's rooted in something misogynistic, racist, colonialism, violence like that wouldn't be surprising anymore but what if —</p>
+            <p>I practice gratitude because a productivity guru monetized my despair. I track my sleep to sell my dreams. I quantify my steps to gamify my mortality. My dopamine pathways are so damaged by curated content. I think my shoes are too gorpy.</p>
         </div>
         </div>  
 
@@ -288,7 +288,8 @@
         <img class="girl" src="/photos/girl.png"></img>
 
         <div class = "thanks">
-            <p>thank you for listening</p>
+            <p>at least i have thing</p>
+
         </div>
         </div>  
 
