--- a/the-thing.html
+++ b/the-thing.html
@@ -246,7 +246,7 @@
         <div class = "pic-line-vertical">
         <img class="girl" src="/photos/girl.png"></img>
         <div class = "thanks">
-            <p>I curate my anxiety through targeted advertisements. I bought you after 20 ads.</p>
+            <p>i curate my anxiety through targeted advertisements. i bought you after 20 ads.</p>
         </div>
         </div>  
 
@@ -260,7 +260,7 @@
         <img class="girl" src="/photos/girl.png"></img>
 
         <div class = "thanks">
-            <p>I practice gratitude because a productivity guru monetized my despair. I track my sleep to sell my dreams. I quantify my steps to gamify my mortality. My dopamine pathways are so damaged by curated content. I think my shoes are too gorpy.</p>
+            <p>i practice gratitude because a productivity guru monetized my despair. i track my sleep to sell my dreams. i quantify my steps to gamify my mortality. my dopamine pathways are so damaged by curated content. i think my shoes are too gorpy.</p>
         </div>
         </div>  
 
