--- a/htmlday-2025.html
+++ b/htmlday-2025.html
@@ -118,7 +118,9 @@
             'jet2 holiday',
             'tsitp',
             'wired earbuds',
-            'matcha'
+            'matcha',
+            'kpop demon hunters',
+            'sodapop',
         ];
         
         const screen = document.querySelector('.screen');
